--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,31 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Safefire</title>
-<link href="vendor.css?8824c3d04c42714b33e7" rel="stylesheet"><link href="index.css?8824c3d04c42714b33e7" rel="stylesheet"></head>
+<link href="vendor.css?e4117791598ee1a75d0c" rel="stylesheet"></head>
+
+<style>
+  html {
+    overflow-y: hidden;
+  }
+
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #000000;
+  }
+</style>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="runtime~index.js?8824c3d04c42714b33e7"></script><script type="text/javascript" src="vendor.js?8824c3d04c42714b33e7"></script><script type="text/javascript" src="index.js?8824c3d04c42714b33e7"></script></body>
+<script type="text/javascript" src="runtime~index.js?e4117791598ee1a75d0c"></script><script type="text/javascript" src="vendor.js?e4117791598ee1a75d0c"></script><script type="text/javascript" src="index.js?e4117791598ee1a75d0c"></script></body>
 
 </html>
