--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Safefire</title>
-<link href="vendor.css?b265ad1599d86f3db3c6" rel="stylesheet"></head>
+<link href="vendor~index.css?b6c99e25cf5d50372d5e" rel="stylesheet"></head>
 
 <style>
   html {
@@ -30,6 +30,6 @@
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="runtime~index.js?b265ad1599d86f3db3c6"></script><script type="text/javascript" src="vendor.js?b265ad1599d86f3db3c6"></script><script type="text/javascript" src="index.js?b265ad1599d86f3db3c6"></script></body>
+<script type="text/javascript" src="vendor~index~vue.js?b6c99e25cf5d50372d5e"></script><script type="text/javascript" src="vendor~index.js?b6c99e25cf5d50372d5e"></script><script type="text/javascript" src="index.js?b6c99e25cf5d50372d5e"></script><script type="text/javascript" src="vue.js?b6c99e25cf5d50372d5e"></script></body>
 
 </html>
